WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200951
[iOS] HLS streams disappear from Now Playing when paused on the lock screen
https://bugs.webkit.org/show_bug.cgi?id=200951
Summary
[iOS] HLS streams disappear from Now Playing when paused on the lock screen
Jer Noble
Reported
2019-08-20 16:37:51 PDT
[iOS] HLS streams disappear from Now Playing when paused on the lock screen
Attachments
Patch
(2.52 KB, patch)
2019-08-20 16:42 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2019-08-20 16:39:11 PDT
<
rdar://problem/54534301
>
Jer Noble
Comment 2
2019-08-20 16:42:08 PDT
Created
attachment 376827
[details]
Patch
WebKit Commit Bot
Comment 3
2019-08-21 11:19:29 PDT
Comment on
attachment 376827
[details]
Patch Clearing flags on attachment: 376827 Committed
r248952
: <
https://trac.webkit.org/changeset/248952
>
WebKit Commit Bot
Comment 4
2019-08-21 11:19:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug