Cherry-pick r248952. rdar://problem/54579626

[iOS] HLS streams disappear from Now Playing when paused on the lock screen
    https://bugs.webkit.org/show_bug.cgi?id=200951
    <rdar://problem/54534301>

    Reviewed by Eric Carlson.

    The AVPlayerItemTracks will get recreated on occasion (during seeks, and when
    changing buffering policy) which can result in a player which no longer reports
    that it has audio, which in turn results in Now Playing no longer considering
    the web page to be an eligable now playing application. Bridge this gap by also
    taking AVPlayerItem.hasEnabledAudio into account when determining whether the
    player has audio.

    * platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
    (WebCore::MediaPlayerPrivateAVFoundationObjC::tracksChanged):

    Canonical link: https://commits.webkit.org/214698@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248952 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.282@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@248986 268f45cc-cd09-0410-ab3c-d52691b4dbfc